--- a/Aufgabe 2b/Aufgabe2b.css
+++ b/Aufgabe 2b/Aufgabe2b.css
@@ -1,7 +1,14 @@
-
+div{
+border:solid black;
+font-size:20px;
+width:100px;
+height:200px;
+position:absolute;
+bottom: 40px;
+}
 #Nachzieh{
 background-color:brown;
-width:100px;
+width:120px;
 position:absolute;
 top:1em;
 height:200px;
@@ -13,7 +20,7 @@ background-color:white;
 position:absolute;
 right:2em;
 top:1em;
-width:100px;
+width:120px;
 height:200px;
 border:solid black;
 }
