--- a/Aufgabe 3/Aufgabe3.css
+++ b/Aufgabe 3/Aufgabe3.css
@@ -24,6 +24,10 @@ width:120px;
 height:200px;
 border:solid black;
 }
-
+button{
+position:absolute;
+right: 2em;
+top: 20em;
+}
 body{
 background-color:#10a910;}
