--- a/Aufgabe 3/Aufgabe3.css
+++ b/Aufgabe 3/Aufgabe3.css
@@ -6,6 +6,14 @@ height:200px;
 position:absolute;
 bottom: 40px;
 }
+.pile{
+width:120px;
+position:absolute;
+top:0em;
+width:120px;
+height:200px;
+}
+
 #Nachzieh{
 background-color:brown;
 width:120px;
