--- a/Endabgabe/A11.css
+++ b/Endabgabe/A11.css
@@ -3,18 +3,31 @@ position:absolute;
 display:inline;
 z-index:3;}
 
+#Baelle{
+margin-left: 380px;
+float:right;
+border:2px solid black;
+font-size:20px;
+font-color:red;
+}
+
+#timer{
+margin-left: 380px;
+float:right;
+border:2px solid black;
+font-size:50px;
+font-color:red;
+
+}
+
 h1{
 text-decoration: underline;
 margin-left:20px;
 color:red;
 }
 
-#start{
+button{
 width:360px;
 height:40px;}
 
-#scores{
-width:360px;
-height:40px;}
-
-#canvas{position:absolute;z-index:2}
+#canvas{position:absolute;z-index:2;float:left}
