--- a/Endabgabe/A11.css
+++ b/Endabgabe/A11.css
@@ -5,30 +5,62 @@ display:inline;
 z-index:3;}
 
 #Baelle{
+margin-top:20px;
 margin-left: 380px;
+width:400px;
 float:right;
-border:2px solid black;
-font-size:20px;
+font-size:40px;
 font-color:red;
 }
 
 #timer{
+width:400px;
+margin-top:20px;
 margin-left: 380px;
 float:right;
-border:2px solid black;
-font-size:50px;
+font-size:40px;
 font-color:red;
 
 }
+#score{
+width:400px;
+margin-top:20px;
+margin-left: 380px;
+float:right;
+font-size:40px;
+font-color:red;
 
+}
 h1{
 text-decoration: underline;
 margin-left:20px;
 color:red;
 }
-
+#restart{
+width:400px;
+font-size:20px;
+position:center;
+}
 button{
 width:360px;
 height:40px;}
 
 #canvas{position:absolute;z-index:2;float:left}
+
+h3{
+text-align:center;
+text-decoration:underline;
+font-size:20px;
+}
+
+p{
+text-align:center;
+font-size:50px;
+}
+
+input{
+width:300px;
+height:100px;
+font-size:30px;
+display: inline-block;
+}
