--- a/Endabgabe/A11.css
+++ b/Endabgabe/A11.css
@@ -1,7 +1,21 @@
+.crosshair{
+cursor:crosshair;
+}
+#start{
+margin-left:3em;
+}
+
+#scores{
+margin-left:3em;
+}
 
 #div{
+background-color:#D8D8D8;
 position:absolute;
-display:inline;
+left:25%;
+border: 2px solid black;
+margin: 5px;
+padding: 5px;
 z-index:3;}
 
 #Baelle{
@@ -33,34 +47,44 @@ font-color:red;
 }
 h1{
 text-decoration: underline;
-margin-left:20px;
-color:red;
+text-align:center;
+color:#8A4B08;
 }
+
 #restart{
 width:400px;
 font-size:20px;
-position:center;
+margin-left:3em;
 }
 button{
 width:360px;
-height:40px;}
+height:40px;
+margin-left:3em;}
 
 #canvas{position:absolute;z-index:2;float:left}
 
 h3{
-text-align:center;
 text-decoration:underline;
 font-size:20px;
 }
 
 p{
-text-align:center;
 font-size:50px;
 }
 
-input{
+h2{
+font-size:20px;
+font-style:italic;
+}
+#input{
+width:300px;
+height:150px;
+font-size:30px;
+display: inline-block;
+}
+
+#output{
 width:300px;
 height:100px;
 font-size:30px;
-display: inline-block;
 }
